fix(filters): filters card has no border on mobiles when filters hidden

--- a/catalogue/templates/products/styles/products_list.css
+++ b/catalogue/templates/products/styles/products_list.css
@@ -6,7 +6,13 @@
     background: var(--turquoise-color) !important;
 }
 
+
+
 @media (max-width: 767px) {
+    #filtersCard {
+        border: none;
+    }
+
     .filters-container {
         margin-bottom: 10px;
     }
